# posit_kdtree

./: .gitmodules  CMakeLists.txt  README.md  patch_softposit.sh
docker_kdd/: Dockerfile  README.md  deploy_bfp.sh  deploy_cppposit.sh  deploy_kdtree.sh  deploy_softfloat.h  deploy_softfloat.sh  deploy_softposit.sh  posit_kdtree.sh  requirements.txt
include/: bfp.hpp  kdtree_interface.hpp  kdtree_interface_impl.hpp  nanoflann_castclone.hpp  softfloat.hpp
julia/: julia.txt  posit8.jl
python/: CMakeLists.txt  extest.cpp  extest.py  nanoflann_any.py  nanoflann_any2.py  nanoflanns.cpp  nanoflanns2.cpp  nanotest.py  nanotest2.py  pynanoflann_any.cpp  pyposit.py  pyposit16.cpp
scripts/: nanoflann_kdd_analyze.py  testnano.sh
src/: kdtree_interface.cpp  kdtree_interface_bfp.cpp  kdtree_interface_cppPosit.cpp  kdtree_interface_fixedpoint.cpp  kdtree_interface_half.cpp  kdtree_interface_native.cpp  kdtree_interface_softPosit.cpp  kdtree_interface_softfloat.cpp  kdtree_interface_stillwater.cpp  kdtree_interface_test.cpp  nanoflann_kdd.cpp
tests/: kdtree_interface_test.cpp  kdtree_interface_test_run.sh  nanoflann_kdd.cpp
